# bevy_2delight

./: Cargo.toml  TODO.md
assets/anim_quickstart/circle/: circle.aseprite
assets/platformer/: ldtk_icons.aseprite
assets/platformer/lenny/: air.json  idle.json  jump.json  land.json  lenny.aseprite  run.json
assets/platformer/lights/light96/: light96.aseprite  on.json
assets/platformer/shaders/: rain.wgsl
assets/platformer/world/: dirt_ambience.aseprite  world.ldtk
assets/platformer/world/detail/shiny_rock/: rock.json  shiny.aseprite
assets/platformer/world/detail/torch/: torch.aseprite
assets/platformer/world/dirt/: dirt_detail.aseprite
docs/: Bevy_0.16_TODO.md  OLD_TODO_1.md
examples/anim_quickstart/: main.rs
examples/physics_quickstart/: main.rs
examples/platformer/: bgfg.rs  camera.rs  input.rs  ldtk.rs  main.rs  platforms.rs  player.rs
macros/: Cargo.toml  README.md
macros/src/: anim.rs  lib.rs  light.rs  parse_helpers.rs
macros/src/anim/: mod.rs  tag_info.rs
src/: lib.rs  plugin.rs
src/anim/: anim_collect.rs  anim_logic.rs  anim_man.rs  anim_plugin.rs  anim_res.rs  anim_time.rs  anim_traits.rs  collect.rs  logic.rs  man.rs  mod.rs  plugin.rs  time.rs  traits.rs
src/composition/: camera.rs  cleanup.rs  layer.rs  lighting.rs  lit_mat.rs  lit_mat.wgsl  mod.rs  parallax.rs  plugin.rs
src/composition/light/: circle_light.wgsl  light_alloc.rs  light_collect.rs  light_cutout.rs  light_cutout.wgsl  light_interaction.rs  light_man.rs  light_proc.rs  lighting.rs  mod.rs
src/composition/mats/: brightness_cull_mat.rs  brightness_cull_mat.wgsl  circle_light_mat.rs  circle_light_mat.wgsl  cutout_mat.rs  cutout_mat.wgsl  gaussian_blur_mat.rs  gaussian_blur_mat.wgsl  light_cutout_mat.rs  lit_mat.rs  lit_mat.wgsl  mod.rs
src/glue/: aabbify.rs  bullet_time.rs  frac.rs  fvec.rs  mod.rs  terp.rs
src/input/: input_data.rs  input_logic.rs  input_plugin.rs  mod.rs
src/layer/: layer_utils.rs  mod.rs  parallax.rs  plugin.rs
src/layer/camera/: camera_shake.rs  mod.rs
src/layer/layer/: layer_defns.rs  mod.rs  new_layer_defns.rs
src/layer/light/: light_alloc.rs  light_collect.rs  light_interaction.rs  light_man.rs  light_mat.rs  mod.rs
src/ldtk/: entity.rs  int_cell.rs  ldtk_entity.rs  ldtk_int_cell.rs  ldtk_load.rs  ldtk_maint.rs  ldtk_roots.rs  load.rs  mod.rs  plugin.rs
src/particles/: mod.rs  particle_defn.rs  particle_logic.rs  particle_plugin.rs
src/physics/: bullet_time.rs  colls.rs  debug.rs  dyno.rs  hbox.rs  logic.rs  mod.rs  plugin.rs  pos.rs  spat_hash.rs  statics.rs  triggers.rs
src/shader/: mod.rs  shader_collect.rs  shader_logic.rs  shader_man.rs
