[package]
name = "bevy_2delight"
description = "A collection of tools to make building 2d games in Bevy _delightful_"
version = "0.1.0"
edition = "2021"
authors = ["Mark Pekala <mfpekala@gmail.com>"]
exclude = ["assets/*"]
license = "MIT"
homepage = "https://github.com/dream-lake-games/bevy_2delight"
repository = "https://github.com/dream-lake-games/bevy_2delight"
readme = "README.md"

[workspace]
members = ["macros"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
    "png",
] }
bevy_2delight_macros = { version = "0.1.0", path = "macros" }
paste = "1.0"

[dev-dependencies]
bevy = "0.15"
bevy-inspector-egui = "0.28"

[[example]]
name = "anim_quickstart"
path = "examples/anim_quickstart/main.rs"
