[package]
name = "bevy_2delight"
description = "A collection of tools to make building 2d games in Bevy _delightful_"
version = "0.1.0"
edition = "2021"
authors = ["Mark Pekala <mfpekala@gmail.com>"]
exclude = ["assets/*"]
license = "MIT"
homepage = "https://github.com/dream-lake-games/bevy_2delight"
repository = "https://github.com/dream-lake-games/bevy_2delight"
readme = "README.md"

[workspace]
members = ["macros"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_window",
    "embedded_watcher",
    "file_watcher",
    "multi_threaded",
    "png",
] }
bevy_2delight_macros = { version = "0.1.0", path = "macros" }
bevy_ecs_ldtk = "0.11"
bevy_ecs_tilemap = { version = "0.15", default-features = false }
bevy_framepace = "0.18"
fixed = "1.29.0"
lazy_static = "1.5.0"
inventory = "0.3.17"
paste = "1.0"
rand = "0.8.5"
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
bevy = "0.15"
bevy-inspector-egui = "0.28"

[[example]]
name = "anim_quickstart"
path = "examples/anim_quickstart/main.rs"

[[example]]
name = "physics_quickstart"
path = "examples/physics_quickstart/main.rs"

[[example]]
name = "platformer"
path = "examples/platformer/main.rs"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
