[package]
name = "bevy_2delight_macros"
description = "Derive macros for bevy_2delight"
version = "0.2.0"
edition = "2021"
authors = ["Mark Pekala <mfpekala@gmail.com>"]
license = "MIT"
homepage = "https://github.com/dream-lake-games/bevy_2delight"
repository = "https://github.com/dream-lake-games/bevy_2delight"
readme = "README.md"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
] }
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = "1.0"

[lib]
proc-macro = true
